# ollama-manual-pull

./: .gitignore  LICENSE  README.md  pyproject.toml
.codex/environments/: environment.toml
docs/superpowers/plans/: 2026-05-30-visual-download-queue.md  2026-05-31-swiftui-native-app.md
docs/superpowers/specs/: 2026-05-30-visual-download-queue-design.md  2026-05-31-swiftui-native-app-design.md
macos/OllamaManualPull/: APIClient.swift  AppConfig.swift.in  AppStore.swift  ContentView.swift  Formatters.swift  InspectorView.swift  InstalledModelsView.swift  Models.swift  OllamaManualPullApp.swift  PythonServerSupervisor.swift  QueueRowView.swift  QueueView.swift  SearchView.swift
macos/OllamaPull/: APIClient.swift  AppConfig.swift.in  AppStore.swift  ContentView.swift  Models.swift  OllamaPullApp.swift  PythonServerSupervisor.swift  QueueRowView.swift  SearchView.swift  SidebarView.swift
scripts/: build_macos_app.py  macos_native_app.swift  omp.py  tool.sh
src/ollama_manual_pull/: __init__.py  app_logging.py  core.py  queue.py  search.py  server.py
src/ollama_manual_pull/web/: app.js  index.html  styles.css
src/ollama_pull/: app_logging.py  queue.py  search.py  server.py  sources.py
src/ollama_pull/web/: app.js  index.html  styles.css
tests/: test_macos_app_builder.py  test_ollama_manual_pull.py  test_ollama_pull.py  test_queue.py  test_search.py  test_server.py
