[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-manual-pull"
version = "0.1.0"
description = "Manually download and register Ollama models from the registry."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cpjjh" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
ollama-manual-pull = "ollama_manual_pull:main"
ollama-manual-pull-web = "ollama_manual_pull:run_web"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ollama_manual_pull = ["web/*"]
