[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamapull"
version = "0.1.0"
description = "Manually download and register Ollama models from the registry."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cpjjh" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
ollamapull = "ollama_pull:main"
ollamapull-web = "ollama_pull:run_web"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ollama_pull = ["web/*"]
